colcon_ws/log/build_2022-09-11_00-22-55/gatekeeper/stdout_stderr.log
[35m[1mScanning dependencies of target gatekeeper[0m
[ 40%] Built target nominal_controller
[ 60%] [32mBuilding CXX object CMakeFiles/gatekeeper.dir/src/gatekeeper.cpp.o[0m
/root/colcon_ws/src/gatekeeper/src/gatekeeper.cpp: In constructor ‘gatekeeper::Gatekeeper::Gatekeeper()’:
/root/colcon_ws/src/gatekeeper/src/gatekeeper.cpp:28:40: error: unable to find numeric literal operator ‘operator""ms’
   28 |   pub_timer_ = this->create_wall_timer(500ms,
      |                                        ^~~~~
/root/colcon_ws/src/gatekeeper/src/gatekeeper.cpp:29:30: error: ‘publish_occupied_pcl’ is not a member of ‘gatekeeper::Gatekeeper’
   29 |       std::bind(&Gatekeeper::publish_occupied_pcl, this));
      |                              ^~~~~~~~~~~~~~~~~~~~
/root/colcon_ws/src/gatekeeper/src/gatekeeper.cpp: At global scope:
/root/colcon_ws/src/gatekeeper/src/gatekeeper.cpp:149:6: error: no declaration matches ‘void gatekeeper::Gatekeeper::publish_occupied_pcl()’
  149 | void Gatekeeper::publish_occupied_pcl() {
      |      ^~~~~~~~~~
/root/colcon_ws/src/gatekeeper/src/gatekeeper.cpp:149:6: note: no functions named ‘void gatekeeper::Gatekeeper::publish_occupied_pcl()’
In file included from /root/colcon_ws/src/gatekeeper/src/gatekeeper.cpp:10:
/root/colcon_ws/src/gatekeeper/include/gatekeeper/gatekeeper.hpp:35:7: note: ‘class gatekeeper::Gatekeeper’ defined here
   35 | class Gatekeeper : public rclcpp::Node {
      |       ^~~~~~~~~~
make[2]: *** [CMakeFiles/gatekeeper.dir/build.make:63: CMakeFiles/gatekeeper.dir/src/gatekeeper.cpp.o] Error 1
make[1]: *** [CMakeFiles/Makefile2:80: CMakeFiles/gatekeeper.dir/all] Error 2
make: *** [Makefile:141: all] Error 2
